<resources>
    <string name="app_name">The Music Player</string>

    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playlist_image">Playlist Image</string>
    <string name="playlist_title">Playlist Title</string>
    <string name="play_button">Play Button</string>
    <string name="menu_button">Menu Button</string>
    <string name="artist_image">Artist Image</string>
    <string name="artist_name">Artist Name</string>
    <string name="genres_image">Genres Image</string>
    <string name="shuffle_all">Shuffle All</string>
    <string name="song_cover">Song Cover</string>
    <string name="song_title">Song Title</string>
    <string name="like_button">Like Button</string>
    <string name="search">search</string>
    <string name="album_image">Album Image</string>
    <string name="album_name">Album Name</string>
</resources>