<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/songLayout"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

        <!-- Circular Image View  -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/songImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:civ_border_color="@color/purple_navy"
        app:civ_border_width="2dp"
        android:contentDescription="@string/song_cover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/songImage"
        app:layout_constraintStart_toEndOf="@+id/songImage"
        app:layout_constraintTop_toTopOf="@+id/songImage">

        <TextView
            android:id="@+id/songTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_title"
            android:textColor="@color/purple_navy"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/artistNameSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/artist_name"
            android:textColor="@color/cadet_blue"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/songTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/songLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/like_button"
        android:src="@drawable/like"
        app:layout_constraintBottom_toBottomOf="@+id/songMenu"
        app:layout_constraintEnd_toStartOf="@+id/songMenu"
        app:layout_constraintTop_toTopOf="@+id/songMenu"
        app:tint="@color/cadet_blue"
        tools:ignore="RedundantDescriptionCheck" />

    <ImageView
        android:id="@+id/songMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/menu_button"
        android:src="@drawable/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/purple_navy"
        tools:ignore="RedundantDescriptionCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>